--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "chalk": "^2.4.1",
     "dateformat": "^3.0.3",
+    "material-ui": "^1.0.0-beta.47",
     "puppeteer": "^1.4.0",
+    "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-virtualized": "^9.18.5"
   },
   "scripts": {
     "grab": "node ./src/grabber/index",
