--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lowcost-sapsan",
   "version": "0.2.5",
   "private": true,
-  "homepage" : "http://luchanso.github.io/lowcost-sapsan",
+  "homepage": "http://luchanso.github.io/lowcost-sapsan",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
     "chalk": "^2.4.1",
@@ -14,7 +14,9 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "react-virtualized": "^9.18.5"
+    "react-virtualized": "^9.18.5",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   },
   "scripts": {
     "predeploy": "yarn build",
