--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "1.1.4",
     "react-virtualized": "^9.18.5",
     "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "sleep-promise": "^6.0.0"
   },
   "scripts": {
     "predeploy": "yarn build",
