--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.0.0-beta.43",
     "chalk": "^2.4.1",
     "dateformat": "^3.0.3",
+    "fs-extra": "^6.0.1",
     "gh-pages": "^1.1.0",
     "material-ui": "^1.0.0-beta.47",
     "puppeteer": "^1.4.0",
